# personal-llm

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  chat.py  data_loader.py  rag_pipeline.py
